[gd_scene load_steps=5 format=3 uid="uid://co6pnwtfv8dpx"]

[ext_resource type="Script" path="res://Scripts/Menus/SelectCharacter.gd" id="1_82fg5"]
[ext_resource type="Texture2D" uid="uid://nqb4a5k0ite7" path="res://Images/Characters/Dark_elf/Dark_elf_static-removebg-preview.png" id="2_6t4y7"]
[ext_resource type="Texture2D" uid="uid://4dsauw6fgf1f" path="res://Images/Characters/Dark_elf/Dark_elf_idle_down.png" id="2_dgpdo"]
[ext_resource type="Texture2D" uid="uid://qje1ewiubno" path="res://Images/Tiles/UI/Menu/Exit1.png" id="2_tmn5u"]

[node name="SelectCharacter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_82fg5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -108.0
offset_right = 84.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkElfButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
icon = ExtResource("2_6t4y7")
flat = true

[node name="KnightButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("2_dgpdo")

[node name="ElfButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Elf"
icon = ExtResource("2_dgpdo")

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_tmn5u")
flat = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 450)
zoom = Vector2(3, 3)

[connection signal="pressed" from="VBoxContainer/DarkElfButton" to="." method="_on_dark_elf_button_pressed"]
[connection signal="pressed" from="VBoxContainer/KnightButton" to="." method="_on_knight_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ElfButton" to="." method="_on_elf_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
